2015-04-08  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c: Fix paddle emulation (adapt to new KOS return values).
  Add PLATFORM_Configure() to parse DISPLAY_X_ADJUST and
  DISPLAY_Y_ADJUST. Remove warnings and some unused code.
* dc/config.h: Add SUPPORTS_PLATFORM_CONFIGURE.
* dc/atari800.cfg: Recreated with new emulator version.


2015-04-01  Christian Groessler  <chris@groessler.org>
* sound_oss.c: Fix sound device name for NetBSD and OpenBSD.


2015-03-31  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c: Fix crash when disconnecting the controller while being
  in the emulator menu. Fix inaccessibility of controller when
  disconnecting and reconnecting to a different port while being in the
  keyboard emulation menu.


2015-03-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* configure.ac: Fix displaying --enable-nonlinear_mixing twice on
  ./configure --help. NONLINEAR_MIXING now defaults to enabled on all targets.


2015-03-28  Christian Groessler  <chris@groessler.org>
* ui.c, ui_basic.c: Adapt emulator menu to Dreamcast and
  add DC specific menu items.
* dc/atari_dc.c: Ditto. And fix swapped up/down direction when using the
  controller joystick.


2015-03-27  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c (controller_kb): Fix auto-repeat in emulator menu.


2015-03-23  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c: The overridden console keys were never released, except
  for START.


2015-03-21  Perry McFarlane  <perry_m@mail.com>
* gtia.c: Improve player/playfield collisions for NEW_CYCLE_EXACT


2015-03-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* pokeysnd.[ch], DOC/NEWS: Fixed a crash with SYNCHRONIZED_SOUND, when enabling
  stereo sound together with ENABLE_NEW_POKEY=0. Added comment to avoid future
  mistakes.


2015-03-20  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c: Fix problem when trying to leave the on-screen keyboard